<resources>
    <string name="app_name">Calendar</string>
    <string name="channel_description">Notifications of notes in calendar</string>
    <string name="channel_name">Notifications</string>
    <string name="saved_high_score_key">ee</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_clear_data">Clear data</string>
    <string name="button_alarm_setting">Alarm</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_start_date">2020–07–09</string>
    <string name="button_end_date">2020–07–10</string>
    <string name="upper_limit">Upper limit</string>
    <string name="lower_limit">Lower limit</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="button_list">List</string>
    <string name="button_settings">Settings</string>
    <string name="button_add_new">New</string>
    <string name="alert_no_rows_found">No rows found</string>
    <string name="button_start_time">08:10</string>
    <string name="button_end_time">21:37</string>
    <string name="button_done">Mark as done</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="remind_about">Remind about</string>
    <string name="restart_alarms_and_notifies">Reset alarms</string>
    <string name="alarm_sleep_mode_is_off">Alarm sleep mode is off</string>
    <string name="end_sleep_mode">End sleep mode</string>
    <string name="start_sleep_mode">Start sleep mode</string>
    <string name="time">Time</string>
    <string name="alarm_active">Alarm inactive</string>
    <string name="cyclic_text">Cyclic mode</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="alarm_inexact">Alarm inexact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hold_to_restart">Too long? Restart</string>
</resources>