<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilterListActivity">

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upper_start_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upper_end_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upper_start_date_button" />

    <Button
        android:id="@+id/lower_start_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lower_end_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/button_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upper_start_date_button" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upper_limit"
        app:layout_constraintBottom_toTopOf="@+id/upper_start_date_button"
        app:layout_constraintEnd_toEndOf="@+id/upper_start_date_button"
        app:layout_constraintStart_toStartOf="@+id/upper_start_date_button" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lower_limit"
        app:layout_constraintBottom_toTopOf="@+id/lower_start_date_button"
        app:layout_constraintEnd_toEndOf="@+id/lower_start_date_button"
        app:layout_constraintStart_toStartOf="@+id/lower_start_date_button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/start_date"
        app:layout_constraintTop_toTopOf="@id/lower_start_date_button"
        app:layout_constraintEnd_toStartOf="@+id/upper_start_date_button"
        app:layout_constraintStart_toEndOf="@+id/lower_start_date_button" />
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/end_date"
        app:layout_constraintTop_toTopOf="@id/lower_end_date_button"
        app:layout_constraintEnd_toStartOf="@+id/upper_end_date_button"
        app:layout_constraintStart_toEndOf="@+id/lower_end_date_button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lower_end_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        app:layout_constraintBottom_toTopOf="@id/lower_end_date_button"
        app:layout_constraintEnd_toEndOf="@+id/lower_end_date_button"
        app:layout_constraintStart_toStartOf="@id/lower_end_date_button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/upper_end_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        app:layout_constraintBottom_toTopOf="@id/upper_end_date_button"
        app:layout_constraintEnd_toEndOf="@+id/upper_end_date_button"
        app:layout_constraintStart_toStartOf="@id/upper_end_date_button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lower_start_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/lower_start_date_button"
        app:layout_constraintStart_toStartOf="@id/lower_start_date_button"
        app:layout_constraintTop_toBottomOf="@id/lower_start_date_button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/upper_start_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/upper_start_date_button"
        app:layout_constraintStart_toStartOf="@id/upper_start_date_button"
        app:layout_constraintTop_toBottomOf="@id/upper_start_date_button" />

    <EditText
        android:id="@+id/content_text2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lower_end_date_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Content"
        app:layout_constraintBottom_toTopOf="@+id/content_text2"
        app:layout_constraintStart_toStartOf="@+id/content_text2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/content_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/content_text2"
        app:layout_constraintEnd_toEndOf="@+id/content_text2"
        app:layout_constraintStart_toStartOf="@id/content_text2"/>


</androidx.constraintlayout.widget.ConstraintLayout>